--- a/project.json
+++ b/project.json
@@ -1,10 +1,14 @@
 {
   "version": "1.0.0-*",
+  "testRunner" : "xunit",
   "buildOptions": {
     "debugType": "portable",
     "emitEntryPoint": true
   },
-  "dependencies": {},
+  "dependencies": {
+    "xunit":"2.2.0-beta4-build3444",
+    "dotnet-test-xunit": "2.2.0-preview2-build1029"
+  },
   "frameworks": {
     "netcoreapp1.1": {
       "dependencies": {
